[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=2]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Jump4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "Jump",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 16.551
height = 46.898

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 13, 2.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 19.5, 23.5 )

[sub_resource type="Animation" id=16]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 116.449, 100 )
script = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -40, 0 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.999996, -6 )
scale = Vector2( 1.40625, 1.40625 )
frames = SubResource( 13 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_enabled = true

[node name="Attack" type="Area2D" parent="."]
position = Vector2( -0.448997, 39 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 0, 0.5 )
shape = SubResource( 14 )

[node name="Damage" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Damage"]
position = Vector2( 0.0510025, 5.5 )
shape = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="TimerForReset" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Attack" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Area2D2_body_entered"]
[connection signal="timeout" from="TimerForReset" to="." method="_on_TimerForReset_timeout"]
